--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <link rel="canonical" href="https://avgrouppro.ru/gde-kupit/">
     <meta name="robots" content="noindex, nofollow">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="/avgdelivery/favicon.ico">
 
     <meta property="og:locale" content="ru_RU" />
     <meta property="og:type" content="article" />
